# fufarm_hydro

./: .gitignore  README.md  activate_venv.sh  ec_config.json  foo.py  fufarm_hydro.py  fufarm_hydro.yml  gpio_pwm_test.py  homehydro.yml  hydrocontrol.yml  mqtt-io.yml  mqtt_util.py  publish.py  pyproject.toml  run_mqtt_io.sh  run_webapp.sh  state_classes.py  stateclass.py  util.py
homehydro/: __main__.py  views.py
homehydro/hydrocontrol/: controller.py  ec_ calibrator.py  ec_calibrator.py  mqtt_util.py  state_classes.py
homehydro/static/: style.css
homehydro/templates/: index.html
hydrocontrol_ui/: __init__.py  __main__.py  views.py
hydrocontrol_ui/hydrocontrol/: controller.py  ec_calibrator.py  mqtt_util.py  state_classes.py
hydrocontrol_ui/static/: hydrocontrolui.js  style.css
hydrocontrol_ui/templates/: index.html
webapp/: __init__.py  views.py
webapp/hydrocontrol/: controller.py  mqtt_util.py
webapp/static/: script.js
webapp/templates/: index.html
